--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,13 @@
 {
-    "dependencies": {
-        "com.unity.incrementalcompiler": "0.0.38", 
-        "com.unity.entities": "0.0.12-preview.1"
-    }, 
-    "registry": "https://staging-packages.unity.com", 
-    "testables": [
-        "com.unity.collections", 
-        "com.unity.entities", 
-        "com.unity.jobs"
-    ]
+  "dependencies": {
+    "com.unity.incrementalcompiler": "0.0.38",
+    "com.unity.entities": "0.0.12-preview.1",
+    "com.unity.probuilder": "4.0.0-preview.4"
+  },
+  "registry": "https://staging-packages.unity.com",
+  "testables": [
+    "com.unity.collections",
+    "com.unity.entities",
+    "com.unity.jobs"
+  ]
 }
