--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "com.unity.incrementalcompiler": "0.0.38",
     "com.unity.entities": "0.0.12-preview.1",
-    "com.unity.probuilder": "4.0.0-preview.4"
+    "com.unity.probuilder": "4.0.0-preview.4",
+    "com.unity.shadergraph": "1.1.9-preview",
+    "com.unity.render-pipelines.lightweight": "1.1.10-preview"
   },
   "registry": "https://staging-packages.unity.com",
   "testables": [
